# Adhesion

./: .check_netcdf_capabilities.py  .gitignore  .travis.yml  README.md  compile_doc.sh  conf.html  contributing.html  development.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  run-tests.py  search.html  searchindex.js  setup.py  testing.html  usage.html
Adhesion/: CHANGELOG.md  ChangeLog.md  DiscoverVersion.py  Exponential.py  Harmonic.py  Lj93.py  PlasticSystemSpecialisations.py  Potentials.py  PowerLaw.py  SmoothSystemSpecialisations.py  Systems.py  VdW82.py  __init__.py
_modules/: index.html
_sources/: conf.py.txt  index.rst.txt  usage.rst.txt
_static/: documentation_options.js
commandline/: soft_wall.py
docs/: Makefile  conf.py  contributing.rst  development.rst  index.rst  installation.rst  make.bat  testing.rst  usage.rst
examples/: Minimal_Example.ipynb  adhesive_plastic_simulation_cone.html  adhesive_plastic_simulation_cone.ipynb  adhesive_plastic_simulation_cone.py  adhesive_simulation_cone.ipynb  adhesive_simulation_rough.html  adhesive_simulation_rough.ipynb  adhesive_simulation_rough.py  adhesive_simulation_sphere.html  adhesive_simulation_sphere.ipynb  adhesive_simulation_sphere.py  contacting_points.html  contacting_points.ipynb  contacting_points.py  dugdale.py  example_repulsive_softwall.ipynb  hardwall_adhesion_custom.html  hardwall_adhesion_custom.py  index.html  power_law_potential.html  power_law_potential.ipynb  power_law_potential.py  preconditionning.html  preconditionning.ipynb  preconditionning.py  selfcode_adhesive_simulation_cone.ipynb  selfcode_el_adh.ipynb  selfcode_el_adh_exp.ipynb  selfcode_el_pl_adh.ipynb  sinewave_bem_vs_jkr.html  sinewave_bem_vs_jkr.py  test_examples.html
helpers/: LBFGS_convergence_randomly_rough_scipy_vs_NuMPI.py  LBFGS_convergence_smoothball_scipy_vs_NuMPI.py  LBFGS_scipy_vsNuMPI.py  PotentialHelper.py  SplineHelper.py  Testing_augmented_Lagrangian.py  VdW_Spline.py  check_gradient_energy.py  hysteresis.py  hysteresis_simple_smooth.py  influence_maxcor.py  l_bfgs_b_test.py  simple_smooth.py  smoothcontact_performance.py  unstable_traction.py
long_tests/: __init__.py  test_bugnicourt_bench_reduced.py  test_sphere_vdw82_mpi.py
maintenance/: copyright.py  replace_header.py  update_license_headers.sh
singularity/: README.md  adhesion_mpi.def  adhesion_serial.def  pnetcdf_openmpi-4.0.2-gcc-9.def  requirements_serial.def
source/: Adhesion.CommandLineInterface.html  Adhesion.Interactions.html  Adhesion.ReferenceSolutions.html  Adhesion.ReferenceSolutions.sinewave.html  Adhesion.System.html  Adhesion.html  modules.html
(+164 files in other folders)
